Fix mobile scrolling and improve typography
- Fix Services and Portfolio sections to enable proper mobile side-scrolling
- Reduce line spacing for 'What makes us unique' headline
- Remove 'Need more pages' line from pricing card
- Add line break between 'Real Businesses' and 'Real Results'
- Split footer copyright to separate lines for better readability

--- a/content/blog/website-vs-social-media.mdx
+++ b/content/blog/website-vs-social-media.mdx
@@ -3,7 +3,7 @@ title: "Website or Social Media: Which Comes First?"
 date: "2025-01-22"
 excerpt: "Everyone says 'build your social following first.' They're wrong. Here's why owning your platform beats renting someone else's."
 tags: ["strategy", "social media", "business"]
-heroImage: "/blog/6-day-launch.jpg"
+heroImage: "/blog/website-vs-social-media/hero.png"
 draft: false
 ---
 
