--- a/content/blog/when-you-need-a-website.mdx
+++ b/content/blog/when-you-need-a-website.mdx
@@ -3,7 +3,7 @@ title: "How to Know When You Actually Need a Website"
 date: "2025-01-20"
 excerpt: "Not every business needs a website on day one. Here's how to know when it's time to build one—and when you can wait."
 tags: ["business", "strategy", "websites"]
-heroImage: "/blog/6-day-launch.jpg"
+heroImage: "/blog/when-you-need-a-website/hero.png"
 draft: false
 ---
 
