--- a/content/blog/why-6-day-launches-win.mdx
+++ b/content/blog/why-6-day-launches-win.mdx
@@ -3,7 +3,7 @@ title: "Why 6-Day Launches Win"
 date: "2025-01-15"
 excerpt: "Most businesses overthink their first website. Here's why shipping fast beats endless perfectionism—and how a 6-day timeline forces the right decisions."
 tags: ["launches", "business", "strategy"]
-heroImage: "/blog/6-day-launch.jpg"
+heroImage: "/blog/why-6-day-launches-win/hero.png"
 draft: false
 ---
 
